# pjecz-carina-api-key

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: gcloud-app-deploy.yml
carina/: app.py
cli/commands/: cmd_exh_exhortos.py  database.py
config/: settings.py
lib/: fastapi_not_implemented.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  fastapi_validation_exception_handler.py  google_cloud_storage.py  pwgen.py  schemas_base.py  universal_mixin.py
pjecz_carina_api_key/: main.py  settings.py
pjecz_carina_api_key/dependencies/: authentications.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  google_cloud_storage.py  pwgen.py  safe_string.py
pjecz_carina_api_key/models/: autoridades.py  bitacoras.py  domicilios.py  entradas_salidas.py  estados.py  exh_areas.py  exh_exhortos.py  exh_exhortos_actualizaciones.py  exh_exhortos_archivos.py  exh_exhortos_partes.py  exh_exhortos_promociones.py  exh_exhortos_promociones_archivos.py  exh_exhortos_promociones_promoventes.py  exh_exhortos_promoventes.py  exh_exhortos_respuestas.py  exh_exhortos_respuestas_archivos.py  exh_exhortos_respuestas_videos.py  exh_exhortos_videos.py  exh_externos.py  exh_tipos_diligencias.py  materias.py  modulos.py  municipios.py  oficinas.py  tareas.py  usuarios.py
pjecz_carina_api_key/routers/: autoridades.py  bitacoras.py  distritos.py  domicilios.py  estados.py  (+25 more)
tests/: README.md  __init__.py  database.py  load_env.py  test_000_consultar_estados.py  test_000_consultar_exh_areas.py  test_000_consultar_municipios.py  test_00_consultar_estados.py  test_00_consultar_exh_areas.py  test_00_consultar_municipios.py  test_010_consultar_materias.py  test_01_consultar_materias.py  test_020_enviar_exhorto.py  test_02_enviar_exhorto.py  test_030_enviar_exhorto_archivos.py  test_03_enviar_exhortos_archivos.py  test_040_consultar_exhorto.py  test_04_consultar_exhorto.py  test_051_enviar_respuesta.py  test_051_enviar_respuesta_al_exhorto.py  test_052_enviar_archivos_de_respuesta_al_exhorto.py  test_052_enviar_respuesta_archivos.py  test_05a_enviar_respuesta_al_exhorto.py  test_05b_enviar_archivos_de_respuesta_al_exhorto.py  test_060_enviar_actualizacion.py  test_071_enviar_promocion.py  test_072_enviar_promocion_archivos.py  test_estados.py  test_exh_exhortos.py  test_materias.py  test_municipios.py
(+124 files in other folders)
