[tool.poetry]
name = "pjecz-carina-api-key"
version = "0.1.0"
description = "API con autentificación para enviar y recibir exhortos."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.7"
fastapi = {extras = ["sqlalchemy"], version = "^0.109.0"}
fastapi-pagination = "^0.12.14"
google-auth = "^2.26.2"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.17.0"
google-cloud-storage = "^2.14.0"
gunicorn = "^21.2.0"
hashids = "^1.3.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
sqlalchemy = "^2.0.25"
sqlalchemy-utils = "^0.41.1"
unidecode = "^1.3.8"
uvicorn = "^0.25.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
pylint = "^3.0.3"
pylint-sqlalchemy = "^0.3.0"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
faker = "^25.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
