[tool.poetry]
package-mode = false
name = "pjecz-carina-api-key"
version = "0.7.1"
description = "API con autentificación para enviar y recibir exhortos."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
cryptography = "^44.0.0"
fastapi = {extras = ["sqlalchemy"], version = "^0.115.6"}
fastapi-pagination = "^0.12.26"
google-auth = "^2.37.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.20.2"
google-cloud-storage = "^2.19.0"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.10.3"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.19"
pytz = "^2024.1"
sqlalchemy = "^2.0.32"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
faker = "^26.3.0"
isort = "^5.13.2"
poetry-plugin-export = "^1.8.0"
pre-commit = "^3.8.0"
pylint = "^3.2.6"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.3.2"
lorem = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
